--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html{
     -webkit-text-size-adjust: 100%;
 }
 body {
-    background: url('https://ucarecdn.com/25f34c1a-2d67-4de8-898a-97b27ced5357/anhnen3.jpg') center;
+    background: black;
     height: 100vh;
     width: 100vw;
     /*Chữ mặc định thiết bị System Fonts as used by Medium and WordPress */
